--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ matrix:
     - php: 5.5
       env: SYMFONY_VERSION=2.4.*
     - php: 5.5
-      env: SYMFONY_VERSION='2.6.*@dev'
+      env: SYMFONY_VERSION=2.6.*
     - php: 5.5
       env: SYMFONY_VERSION='2.7.*@dev'
 
