--- a/Tests/Fixtures/Etalon/users_controller.yml
+++ b/Tests/Fixtures/Etalon/users_controller.yml
@@ -1,104 +1,104 @@
 get_users:
   method:     GET
-  pattern:    /users.{_format}
+  path:    /users.{_format}
   controller: ::getUsersAction
 
 get_user:
   method:     GET
-  pattern:    /users/{slug}.{_format}
+  path:    /users/{slug}.{_format}
   controller: ::getUserAction
 
 post_users:
   method:     POST
-  pattern:    /users.{_format}
+  path:    /users.{_format}
   controller: ::postUsersAction
 
 patch_users:
   method:     PATCH
-  pattern:    /users.{_format}
+  path:    /users.{_format}
   controller: ::patchUsersAction
 
 put_user:
   method:     PUT
-  pattern:    /users/{slug}.{_format}
+  path:    /users/{slug}.{_format}
   controller: ::putUserAction
 
 patch_user:
   method:     PATCH
-  pattern:    /users/{slug}.{_format}
+  path:    /users/{slug}.{_format}
   controller: ::patchUserAction
 
 lock_user:
   method:     PATCH
-  pattern:    /users/{slug}/lock.{_format}
+  path:    /users/{slug}/lock.{_format}
   controller: ::lockUserAction
 
 get_user_comments:
   method:     GET
-  pattern:    /users/{slug}/comments.{_format}
+  path:    /users/{slug}/comments.{_format}
   controller: ::getUserCommentsAction
 
 get_user_comment:
   method:     GET
-  pattern:    /users/{slug}/comments/{id}.{_format}
+  path:    /users/{slug}/comments/{id}.{_format}
   controller: ::getUserCommentAction
 
 delete_user_comment:
   method:     DELETE
-  pattern:    /users/{slug}/comments/{id}.{_format}
+  path:    /users/{slug}/comments/{id}.{_format}
   controller: ::deleteUserCommentAction
 
 new_users:
   method:     GET
-  pattern:    /users/new.{_format}
+  path:    /users/new.{_format}
   controller: ::newUsersAction
 
 new_user_comments:
   method:     GET
-  pattern:    /users/{slug}/comments/new.{_format}
+  path:    /users/{slug}/comments/new.{_format}
   controller: ::newUserCommentsAction
 
 ban_user:
   method:     PATCH
-  pattern:    /users/{slug}/ban.{_format}
+  path:    /users/{slug}/ban.{_format}
   controller: ::banUserAction
 
 post_user_comment_vote:
   method:     POST
-  pattern:    /users/{slug}/comments/{id}/votes.{_format}
+  path:    /users/{slug}/comments/{id}/votes.{_format}
   controller: ::postUserCommentVoteAction
 
 check_username_users:
   method:     GET
-  pattern:    /users/check_username.{_format}
+  path:    /users/check_username.{_format}
   controller: ::check_usernameUsersAction
 
 hide_user_comment:
   method:     PATCH
-  pattern:    /users/{userId}/comments/{commentId}/hide.{_format}
+  path:    /users/{userId}/comments/{commentId}/hide.{_format}
   controller: ::hideUserCommentAction
 
 get_foo_bars:
   method:     GET
-  pattern:    /foos/{foo}/bars.{_format}
+  path:    /foos/{foo}/bars.{_format}
   controller: ::getFooBarsAction
 
 get_user_votes:
   method:     GET
-  pattern:    /users/{slug}/votes.{_format}
+  path:    /users/{slug}/votes.{_format}
   controller: ::getUserVotesAction
 
 get_user_vote:
   method:     GET
-  pattern:    /users/{slug}/votes/{id}.{_format}
+  path:    /users/{slug}/votes/{id}.{_format}
   controller: ::getUserVoteAction
 
 get_user_foos:
   method:     GET
-  pattern:    /users/{slug}/foos.{_format}
+  path:    /users/{slug}/foos.{_format}
   controller: ::getUserFoosAction
 
 get_categories:
   method:     GET
-  pattern:    /categories.{_format}
+  path:    /categories.{_format}
   controller: ::getCategoriesAction
