--- a/Tests/Fixtures/Routes/routes_with_options_requirements_and_defaults.yml
+++ b/Tests/Fixtures/Routes/routes_with_options_requirements_and_defaults.yml
@@ -3,3 +3,7 @@ users:
   resource: FOS\RestBundle\Tests\Fixtures\Controller\UsersController
   options:
     expose: true
+  requirements:
+    slug: "[a-z]+"
+  defaults:
+    slug: home
