--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "symfony/serializer":             "~2.3",
         "symfony/yaml":                   "~2.3",
         "symfony/security":               "~2.3",
+        "symfony/browser-kit":            "~2.3",
         "jms/serializer-bundle":          "~0.12"
     },
 
