--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ php:
   - 5.6
   - nightly
   - hhvm
+  - hhvm-nightly
 
 branches:
   only:
@@ -23,6 +24,9 @@ matrix:
       env: SYMFONY_VERSION=2.6.*
     - php: 5.5
       env: SYMFONY_VERSION='2.7.*@dev'
+  allow_failures:
+    - php: nightly
+    - php: hhvm-nightly
 
 before_script:
   - composer self-update
@@ -38,4 +42,3 @@ after_script:
 notifications:
   email:
     - friendsofsymfony-dev@googlegroups.com
-
