update Symfony versions used on Travis
* Symfony 2.7 is stable
* add build for Symfony 2.8.x@dev

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,9 @@ matrix:
     - php: 5.5
       env: SYMFONY_VERSION=2.6.*
     - php: 5.5
-      env: SYMFONY_VERSION='2.7.*@dev'
+      env: SYMFONY_VERSION='2.7.*'
+    - php: 5.5
+      env: SYMFONY_VERSION='2.8.*@dev'
   allow_failures:
     - php: nightly
     - php: hhvm-nightly
