--- a/Tests/Fixtures/Etalon/named_prefixed_reports_collection.yml
+++ b/Tests/Fixtures/Etalon/named_prefixed_reports_collection.yml
@@ -1,29 +1,29 @@
 api_get_billing_spendings:
   path:      /billing/spendings.{_format}
   controller:   ::getBillingSpendingsAction
-  method: GET
+  methods: [GET]
 
 api_get_billing_spendings_by_campaign:
   path:      /billing/spendings/{campaign}.{_format}
   controller:   ::getBillingSpendingsByCampaignAction
-  method: GET
+  methods: [GET]
 
 api_get_billing_payments:
   path:      /billing/payments.{_format}
   controller:   ::getBillingPaymentsAction
-  method: GET
+  methods: [GET]
 
 api_get_billing_earnings:
   path:      /billing/earnings.{_format}
   controller:   ::getBillingEarningsAction
-  method: GET
+  methods: [GET]
 
 api_get_billing_earnings_by_platform:
   path:      /billing/earnings/{platform}.{_format}
   controller:   ::getBillingEarningsByPlatformAction
-  method: GET
+  methods: [GET]
 
 api_get_billing_withdrawals:
   path:      /billing/withdrawals.{_format}
   controller:   ::getBillingWithdrawalsAction
-  method: GET
+  methods: [GET]
