--- a/Tests/Fixtures/Etalon/resource_controller.yml
+++ b/Tests/Fixtures/Etalon/resource_controller.yml
@@ -1,99 +1,99 @@
 options_articles:
-  method:     OPTIONS
+  methods: [OPTIONS]
   path:    /articles.{_format}
   controller: ::optionsAction
 
 get_articles:
-  method:     GET
+  methods: [GET]
   path:    /articles.{_format}
   controller: ::cgetAction
 
 get_article:
-  method:     GET
+  methods: [GET]
   path:    /articles/{slug}.{_format}
   controller: ::getAction
 
 post_articles:
-  method:     POST
+  methods: [POST]
   path:    /articles.{_format}
   controller: ::cpostAction
 
 patch_articles:
-  method:     PATCH
+  methods: [PATCH]
   path:    /articles.{_format}
   controller: ::cpatchAction
 
 put_article:
-  method:     PUT
+  methods: [PUT]
   path:    /articles/{slug}.{_format}
   controller: ::putAction
 
 patch_article:
-  method:     PATCH
+  methods: [PATCH]
   path:    /articles/{slug}.{_format}
   controller: ::patchAction
 
 lock_article:
-  method:     PATCH
+  methods: [PATCH]
   path:    /articles/{slug}/lock.{_format}
   controller: ::lockAction
 
 get_article_comments:
-  method:     GET
+  methods: [GET]
   path:    /articles/{slug}/comments.{_format}
   controller: ::getCommentsAction
 
 get_article_comment:
-  method:     GET
+  methods: [GET]
   path:    /articles/{slug}/comments/{id}.{_format}
   controller: ::getCommentAction
 
 delete_article_comment:
-  method:     DELETE
+  methods: [DELETE]
   path:    /articles/{slug}/comments/{id}.{_format}
   controller: ::deleteCommentAction
 
 new_article:
-  method:     GET
+  methods: [GET]
   path:    /articles/new.{_format}
   controller: ::newAction
 
 new_article_comment:
-  method:     GET
+  methods: [GET]
   path:    /articles/{slug}/comments/new.{_format}
   controller: ::newCommentAction
 
 ban_article:
-  method:     PATCH
+  methods: [PATCH]
   path:    /articles/{slug}/ban.{_format}
   controller: ::banAction
 
 post_article_comment_vote:
-  method:     POST
+  methods: [POST]
   path:    /articles/{slug}/comments/{id}/votes.{_format}
   controller: ::postCommentVoteAction
 
 check_articlename_article:
-  method:     GET
+  methods: [GET]
   path:    /articles/check_articlename.{_format}
   controller: ::check_articlenameAction
 
 hide_article_comment:
-  method:     PATCH
+  methods: [PATCH]
   path:    /articles/{articleId}/comments/{commentId}/hide.{_format}
   controller: ::hideCommentAction
 
 get_article_votes:
-  method:     GET
+  methods: [GET]
   path:    /articles/{slug}/votes.{_format}
   controller: ::getVotesAction
 
 get_article_vote:
-  method:     GET
+  methods: [GET]
   path:    /articles/{slug}/votes/{id}.{_format}
   controller: ::getVoteAction
 
 get_article_foos:
-  method:     GET
+  methods: [GET]
   path:    /articles/{slug}/foos.{_format}
   controller: ::getFoosAction
