--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
     "require": {
         "php":                            ">=5.4.0",
         "psr/log":                        "^1.0",
-        "symfony/framework-bundle":       "^2.7",
-        "symfony/routing":                "^2.7",
+        "symfony/framework-bundle":       "^2.7|^3.0",
+        "symfony/routing":                "^2.7|^3.0",
         "doctrine/inflector":             "^1.0",
         "willdurand/negotiation":         "^2.0",
         "willdurand/jsonp-callback-validator": "^1.0"
@@ -32,16 +32,16 @@
 
     "require-dev": {
         "sensio/framework-extra-bundle":  "^3.0",
-        "symfony/phpunit-bridge":         "~2.7",
-        "symfony/form":                   "^2.7",
-        "symfony/validator":              "^2.7",
-        "symfony/serializer":             "^2.7",
-        "symfony/yaml":                   "^2.7",
-        "symfony/security":               "^2.7",
-        "symfony/browser-kit":            "^2.7",
-        "symfony/dependency-injection":   "^2.7",
-        "symfony/expression-language":    "~2.7",
-        "symfony/css-selector":           "^2.7",
+        "symfony/phpunit-bridge":         "~2.7|^3.0",
+        "symfony/form":                   "^2.7|^3.0",
+        "symfony/validator":              "^2.7|^3.0",
+        "symfony/serializer":             "^2.7|^3.0",
+        "symfony/yaml":                   "^2.7|^3.0",
+        "symfony/security":               "^2.|^3.07",
+        "symfony/browser-kit":            "^2.7|^3.0",
+        "symfony/dependency-injection":   "^2.7|^3.0",
+        "symfony/expression-language":    "~2.7|^3.0",
+        "symfony/css-selector":           "^2.7|^3.0",
         "phpoption/phpoption":            "^1.1",
         "jms/serializer-bundle":          "^1.0",
         "sllh/php-cs-fixer-styleci-bridge": "^1.3"
@@ -50,9 +50,9 @@
     "suggest": {
         "sensio/framework-extra-bundle":  "Add support for route annotations and the view response listener, requires ^3.0",
         "jms/serializer-bundle":          "Add support for advanced serialization capabilities, recommended, requires ^1.0",
-        "symfony/expression-language":    "Add support for using the expression language in the routing, requires ^2.7",
-        "symfony/serializer":             "Add support for basic serialization capabilities and xml decoding, requires ^2.7",
-        "symfony/validator":              "Add support for validation capabilities in the ParamFetcher, requires ^2.7"
+        "symfony/expression-language":    "Add support for using the expression language in the routing, requires ^2.7|^3.0",
+        "symfony/serializer":             "Add support for basic serialization capabilities and xml decoding, requires ^2.7|^3.0",
+        "symfony/validator":              "Add support for validation capabilities in the ParamFetcher, requires ^2.7|^3.0"
     },
 
     "autoload":{
