--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,8 @@
         "symfony/serializer":             "^2.7|^3.0",
         "symfony/yaml":                   "^2.7|^3.0",
         "symfony/security-bundle":        "^2.7|^3.0",
+        "symfony/web-profiler-bundle":    "^2.7|^3.0",
+        "symfony/twig-bundle":            "^2.7|^3.0",
         "symfony/browser-kit":            "^2.7|^3.0",
         "symfony/dependency-injection":   "^2.7|^3.0",
         "symfony/expression-language":    "~2.7|^3.0",
