--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     },
 
     "require-dev": {
-        "sensio/framework-extra-bundle":  "~3.0",
+        "sensio/framework-extra-bundle":  "~2.0|~3.0",
         "symfony/form":                   "~2.3",
         "symfony/validator":              "~2.3",
         "symfony/serializer":             "~2.3",
@@ -39,6 +39,7 @@
         "symfony/security":               "~2.3",
         "symfony/browser-kit":            "~2.3",
         "symfony/dependency-injection":   "~2.3",
+        "symfony/phpunit-bridge":         "~2.7",
         "phpoption/phpoption":            "~1.1.0",
         "jms/serializer":                 "~0.13|~1.0",
         "jms/serializer-bundle":          "~0.12|~1.0",
