conflicts lock <> patch

--- a/Tests/Fixtures/Etalon/prefixed_users_collection.yml
+++ b/Tests/Fixtures/Etalon/prefixed_users_collection.yml
@@ -29,7 +29,7 @@ patch_user:
   controller: ::patchUserAction
 
 lock_user:
-  methods: [PATCH]
+  methods: [LOCK]
   path:    /resources/all/users/{slug}/lock.{_format}
   controller: ::lockUserAction
 
