--- a/Tests/Functional/app/JMSSerializer/config.yml
+++ b/Tests/Functional/app/JMSSerializer/config.yml
@@ -1,8 +1,7 @@
 imports:
     - { resource: ../config/default.yml }
+    - { resource: ../config/exception_listener.yml }
 
 fos_rest:
     view:
         view_response_listener: 'force'
-    exception:
-        enabled: true
