[ParamFetcher] Fix default resolving

--- a/Tests/Functional/app/ParamFetcher/config.yml
+++ b/Tests/Functional/app/ParamFetcher/config.yml
@@ -2,8 +2,9 @@ imports:
     - { resource: ../config/default.yml }
 
 parameters:
-    foo: bar
-    invalid: invalid2
+    bar: bar
+    foo: foo
+    invalid2: invalid2
 
 framework:
     serializer:
