Exclude "Tests" directory from tests

--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,8 @@
     "autoload":{
         "psr-4":{
             "FOS\\RestBundle\\": ""
-        }
+        },
+        "exclude-from-classmap": ["/Tests/"]
     },
 
     "conflict": {
