Implement recommendations, fix tests.

--- a/Tests/Fixtures/Etalon/annotated_version_controller.yml
+++ b/Tests/Fixtures/Etalon/annotated_version_controller.yml
@@ -19,5 +19,5 @@ v3_user:
 get_users:
   path:      /{version}/users.{_format}
   controller:   ::getUsersAction
-  requirements: {version: 'v1|v3'}
+  requirements: {version: v1|v3}
   methods: [GET]
