fix tests using deprecated templating integration
extract tests using html templating rending into a legacy test and disable the templating in tests where it's not needed

--- a/Tests/Functional/app/LegacyTemplating/config.yml
+++ b/Tests/Functional/app/LegacyTemplating/config.yml
@@ -1,10 +1,9 @@
 imports:
     - { resource: ../config/default.yml }
-    - { resource: ../config/exception_listener.yml }
 
 framework:
-    serializer:
-        enabled: true
+    templating:
+        engines: ['twig']
 
 fos_rest:
     view:
