--- a/Tests/Functional/app/config/exception_listener.yml
+++ b/Tests/Functional/app/config/exception_listener.yml
@@ -1,5 +1,6 @@
 fos_rest:
     exception:
         enabled: true
+        exception_controller: 'fos_rest.exception.controller::showAction'
         messages:
             LogicException: true
