Remove deprecated notice about controller_name_converter

--- a/Tests/Functional/app/LegacyTemplating/config.yml
+++ b/Tests/Functional/app/LegacyTemplating/config.yml
@@ -2,6 +2,8 @@ imports:
     - { resource: ../config/default.yml }
 
 framework:
+    serializer:
+        enabled: true
     templating:
         engines: ['twig']
 
