--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: php
 
+sudo: false
+
 cache:
   directories:
     - .phpunit
@@ -36,7 +38,6 @@ before_install:
   - phpenv config-rm xdebug.ini || true
   - composer global require --no-progress --no-scripts --no-plugins symfony/flex dev-master
   - if [ "$DEPENDENCIES" != "" ]; then composer config minimum-stability $DEPENDENCIES; fi
-  - if [ "$SYMFONY_LTS" != "" ]; then composer require --dev --no-update symfony/lts=$SYMFONY_LTS; fi
 
 install:
   - composer update $COMPOSER_FLAGS --prefer-dist
