Removed Symfony 5.0 hacks

--- a/Tests/Functional/app/ExceptionListener/config.yml
+++ b/Tests/Functional/app/ExceptionListener/config.yml
@@ -4,6 +4,8 @@ imports:
 framework:
     serializer:
         enabled: true
+    templating:
+        engines: ['twig']
 
 fos_rest:
     exception: ~
