--- a/Tests/Functional/app/Configuration/config.yml
+++ b/Tests/Functional/app/Configuration/config.yml
@@ -1,5 +1,6 @@
 imports:
     - { resource: ../config/default.yml }
+    - { resource: ../config/default.php }
     - { resource: ../config/sensio_framework_extra.yml }
     - { resource: security.php }
 
