--- a/Tests/Functional/app/Debug/config.yml
+++ b/Tests/Functional/app/Debug/config.yml
@@ -1,5 +1,6 @@
 imports:
     - { resource: ../config/default.yml }
+    - { resource: ../config/default.php }
     - { resource: ../config/exception_listener.yml }
 
 fos_rest:
