deprecate using the ControllerNameParser

--- a/Tests/Functional/app/Configuration/config.yml
+++ b/Tests/Functional/app/Configuration/config.yml
@@ -26,3 +26,5 @@ fos_rest:
         rules:
             - { path: '^/', priorities: ['xml'], fallback_format: ~ }
     versioning: true
+    routing_loader:
+        parse_controller_name: false
