--- a/Tests/Functional/app/Serializer/config.yml
+++ b/Tests/Functional/app/Serializer/config.yml
@@ -7,6 +7,8 @@ framework:
         enabled: true
 
 fos_rest:
+    routing_loader:
+        parse_controller_name: false
     view:
         view_response_listener: 'force'
 
