--- a/Tests/Functional/app/ViewResponseListener/config.yml
+++ b/Tests/Functional/app/ViewResponseListener/config.yml
@@ -19,4 +19,5 @@ fos_rest:
             - { path: ^/, priorities: [ html, json, xml ], fallback_format: ~, prefer_extension: true }
 
 twig:
+    exception_controller: ~
     strict_variables: '%kernel.debug%'
