remove templating support

--- a/Tests/Functional/app/Routing/config.yml
+++ b/Tests/Functional/app/Routing/config.yml
@@ -6,9 +6,4 @@ framework:
         enabled: true
     router: { resource: "%kernel.project_dir%/Routing/routing.yml" }
 
-fos_rest:
-    service:
-        templating: ~
-    view:
-        default_engine: ~
-        force_redirects: []
+fos_rest: ~
