deprecate the templating integration

--- a/Tests/Functional/app/AllowedMethodsListener/config.yml
+++ b/Tests/Functional/app/AllowedMethodsListener/config.yml
@@ -11,3 +11,8 @@ fos_rest:
     allowed_methods_listener: true
     routing_loader:
         parse_controller_name: false
+    service:
+        templating: ~
+    view:
+        default_engine: ~
+        force_redirects: []
