--- a/Tests/Functional/app/Debug/config.yml
+++ b/Tests/Functional/app/Debug/config.yml
@@ -8,3 +8,8 @@ fos_rest:
         debug: true
     routing_loader:
         parse_controller_name: false
+    service:
+        templating: ~
+    view:
+        default_engine: ~
+        force_redirects: []
