--- a/Tests/Functional/app/JMSSerializer/config.yml
+++ b/Tests/Functional/app/JMSSerializer/config.yml
@@ -6,5 +6,9 @@ imports:
 fos_rest:
     routing_loader:
         parse_controller_name: false
+    service:
+        templating: ~
     view:
+        default_engine: ~
+        force_redirects: []
         view_response_listener: 'force'
