--- a/Tests/Functional/app/ParamFetcher/config.yml
+++ b/Tests/Functional/app/ParamFetcher/config.yml
@@ -16,3 +16,8 @@ fos_rest:
     param_fetcher_listener: true
     routing_loader:
         parse_controller_name: false
+    service:
+        templating: ~
+    view:
+        default_engine: ~
+        force_redirects: []
