--- a/Tests/Functional/app/Serializer/config.yml
+++ b/Tests/Functional/app/Serializer/config.yml
@@ -10,7 +10,11 @@ framework:
 fos_rest:
     routing_loader:
         parse_controller_name: false
+    service:
+        templating: ~
     view:
+        default_engine: ~
+        force_redirects: []
         view_response_listener: 'force'
 
 twig:
