--- a/Tests/Functional/app/ExceptionListener/config.yml
+++ b/Tests/Functional/app/ExceptionListener/config.yml
@@ -8,7 +8,8 @@ framework:
         engines: ['twig']
 
 fos_rest:
-    exception: ~
+    exception:
+        forward: true
     format_listener:
         rules:
             - { path: '^/', fallback_format: json }
